--- a/inicio.css
+++ b/inicio.css
@@ -1,10 +1,10 @@
 .esquerda {
-    width: 20%;
+    width: 578px;
     height: 376px;
 }
 
 .centro {
-    width: 55%;
+    width: 900px;
     height: 376px;
 }
 
@@ -14,7 +14,7 @@
   }
 
 .direita {
-    width: 25%;
+    width: 578;
     height: 376px;
 }  
   
